# playground

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  backend_entrypoint.sh  docker-compose.yml  gunicorn_app.sh  main.py  pyproject.toml
alembic/data/: students.json
alembic/versions/: a2802fa4ee77_drop_sections_contentblocks_change_some_.py  b68bbb26c1b0_fix_course_created_by_fkey.py  f2554d34c8c4_move_is_active_to_user.py  ff8762ff8288_.py
api/: courses.py  functions.py  routes.py  sections.py  users.py
codebase/: main.py
codebase/api/: functions.py  routes.py
codebase/db/: mixins.py  models.py
db/: database.py  io_schemas.py  mixins.py  settings.py
db/models/: course.py  user.py
