[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["Lisa Gilyarovskaya <lisa.gilyarovskaya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.20.0"
fastapi = "^0.89.1"
pandas = "^1.5.2"
numpy = "^1.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
