[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["Lisa Gilyarovskaya <lisa.gilyarovskaya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.20.0"
fastapi = "^0.89.1"
pandas = "^1.5.2"
numpy = "^1.24.1"
flake8 = "^6.0.0"
pre-commit = "^2.21.0"
isort = "^5.11.4"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.1"
SQLAlchemy-Utils = "^0.39.0"
alembic = "^1.9.2"
greenlet = "^2.0.1"
logging = "^0.4.9.6"
sqlmodel = "^0.0.8"
httptools = "^0.5.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | alembic
)/
'''
